fix para intellij
Elimina benchmark.jfr accidental (contenía datos del entorno local)
y añade *.jfr al .gitignore.

Co-authored-by: Cursor <cursoragent@cursor.com>