@@ -7,6 +7,32 @@ Proyecto Maven con **5 ejercicios** y tests **JUnit 5**. Completa los `TODO` has
 - JDK **21+**
 - Maven **3.9+**
 
+## IntelliJ IDEA
+
+Abre el proyecto Maven **raíz del módulo** (no la carpeta del repo completo):
+
+```
+modulo-5-modularidad-seguridad/pom.xml
+```
+
+IntelliJ importará 3 submódulos:
+
+| Módulo | Contenido | Ejecutar |
+|--------|-----------|----------|
+| `modulo-5-ejercicios` | Ejercicios con tests JUnit | Click derecho en `*Test` → Run |
+| `modulo-5-demos` | `ModulosEnRuntime`, `ReflectionIlegal`, `TlsDefaults`, `ApisCambiadas` | Run en la clase `main` |
+| `modulo-5-laboratorio` | `LegacyPlatformService`, `SolucionMigrada` | Run en la clase `main` |
+
+Tras abrir el `pom.xml`, espera a que Maven termine de importar y verifica que el SDK del proyecto sea **21+** (`File → Project Structure → Project SDK`).
+
+### Demo `ReflectionIlegal` (VM options opcionales)
+
+Por defecto verás `InaccessibleObjectException` (comportamiento esperado). Para probar el flag de migración, en la configuración Run añade:
+
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+```
+
 ## Cómo trabajar
 
 ```bash
